--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
 # Database
-sqlalchemy==2.0.23
-asyncpg==0.29.0
+SQLAlchemy[asyncio]>=2.0.23
+asyncpg>=0.29.0
 alembic==1.12.1
 psycopg2-binary==2.9.9
 
