--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 cryptography>=41.0.0
+pyjwt[crypto]==2.8.0
 
 # Azure services
 azure-storage-blob==12.19.0
