--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -43,43 +43,34 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports: ["6379:6379"]
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
-        with: { python-version: "3.11" }
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
       - name: Install system deps (psycopg build)
         run: |
           sudo apt-get update
           sudo apt-get install -y libpq-dev build-essential
-      - uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('backend/requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
-      - name: Install dependencies
-        working-directory: ./backend
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Lint
-        working-directory: ./backend
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Type check
-        working-directory: ./backend
-        run: mypy . --ignore-missing-imports
+          pip install pytest pytest-cov
       - name: Wait for services
         run: sleep 10
       - name: Tests
-        working-directory: ./backend
         env:
           DATABASE_URL: postgresql+asyncpg://postgres:postgres@localhost:5432/lexiscan_test
           REDIS_URL: redis://localhost:6379/0
           SECRET_KEY: test-secret-key
           ENVIRONMENT: test
+          PYTHONPATH: ${{ github.workspace }}/backend
         run: |
-          pytest --cov=. --cov-report=xml --cov-report=html
+          pytest
       - name: Upload coverage to Codecov (optional)
         uses: codecov/codecov-action@v3
         continue-on-error: true
@@ -92,25 +83,20 @@ jobs:
 
   frontend-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "18"
-          cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
+          node-version: "20"
       - name: Install
-        working-directory: ./frontend
         run: npm ci
       - name: Lint
-        working-directory: ./frontend
-        run: npm run lint
+        run: npm run lint --if-present
       - name: Type check
-        working-directory: ./frontend
         run: npm run type-check
-      - name: Tests
-        working-directory: ./frontend
-        run: npm run test -- --coverage --watchAll=false
       - name: Upload coverage to Codecov (optional)
         uses: codecov/codecov-action@v3
         continue-on-error: true
