--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ uvicorn[standard]==0.24.0
 # Database
 SQLAlchemy[asyncio]>=2.0.23
 asyncpg>=0.29.0
+aiosqlite>=0.19.0
 alembic==1.12.1
 psycopg2-binary==2.9.9
 
