--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,8 +31,8 @@
   },
   "include": [
     "next-env.d.ts",
-    "src/**/*",
-    "next.config.js",
+    "**/*.ts",
+    "**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": [
