--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -164,6 +164,7 @@ jobs:
               AZURE_STORAGE_CONN=secretref:storage-conn \
               STRIPE_SECRET_KEY=secretref:stripe-secret-key \
               CLAUDE_API_KEY=secretref:claude-api-key \
+              CORS_ALLOWED_ORIGINS=https://orange-ocean-083504e0f.3.azurestaticapps.net/ \
               ENVIRONMENT=production \
               PORT=8000
       - name: Show deployment info
@@ -185,25 +186,46 @@ jobs:
     if: github.ref == 'refs/heads/main'
     environment: production
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: "20"
-        cache: "npm"
-        cache-dependency-path: frontend/package-lock.json
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
 
-    - name: Build and Deploy to Azure Static Web Apps
-      uses: Azure/static-web-apps-deploy@v1
-      with:
-        action: upload
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-        app_location: frontend
-        output_location: out
-        is_static_export: true
-        app_build_command: npm ci && npm run build:static
-        skip_api_build: true
-        deployment_environment: production
-      env:
-        NEXT_PUBLIC_API_URL: ${{ secrets.PROD_API_URL }}
+      - name: Debug SWA token length (no value printed)
+        run: |
+          printf %s "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" | wc -c
+
+      - name: Debug SWA token trailing-bytes (should end with 0a only)
+        run: |
+          printf %s "${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}" | tail -c 8 | od -An -t x1
+
+      - name: Build and Deploy to Azure Static Web Apps
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          action: upload
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          app_location: frontend
+          output_location: out
+          is_static_export: true
+          app_build_command: npm ci && npm run build:static
+          skip_api_build: true
+          deployment_environment: production
+        env:
+          NEXT_PUBLIC_API_URL: ${{ secrets.PROD_API_URL }}
+
+      - name: Azure Login for verification
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Verify Static Web App deployment
+        run: |
+          echo "Static Web App details:"
+          az staticwebapp show -g clauseforge-prod -n clauseforge-frontend --query "{name:name, host:defaultHostname, id:id, region:location, repo:repositoryUrl}"
+          echo ""
+          echo "All Static Web Apps in subscription:"
+          az staticwebapp list --query "[].{name:name, host:defaultHostname, rg:resourceGroup}" -o table
